src/objects/Sample_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SAP_Id__c</fullName>
        <formula>Account__r.SAP_Account_ID__c</formula>
        <label>Account SAP Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <summarizedField>Sample_Request_Line_Item__c.Actual_Hours__c</summarizedField>
        <summaryForeignKey>Sample_Request_Line_Item__c.Sample_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Integration_Status__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sample Requests</relationshipLabel>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PD_I_User_Country__c</fullName>
        <formula>TEXT(PD_I__r.CountryCode)</formula>
        <label>PD&amp;I User Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_I_User_Email__c</fullName>
        <formula>PD_I__r.Email</formula>
        <label>PD&amp;I User Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PD_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD&amp;I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sample_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APAC</fullName>
                </value>
                <value>
                    <fullName>EMENA</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Request_SAP_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Request OSSM Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Requested_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sample Requested Date</label>
        <type>Date</type>
    </fields>
    <label>Sample Request</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>Sample Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>